--- a/index.html
+++ b/index.html
@@ -24,12 +24,81 @@
     <!-- Daisy ui cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
 
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        lato: "Lato"
+                    },
+                    colors: {
+                        primary: '#F85559',
+                        color: '#121212',
+                        // 'color': 'rgba(18, 18, 18, 0.60)',
+                        // 'dark-2': 'rgba(18, 18, 18, 0.80)'
+                    }
+                },
+                container: {
+                    // center: true,
+                    padding: {
+                        DEFAULT: '2.5rem',
+                        md: '3rem',
+                        lg: '4rem',
+                        xl: '7rem',
+                        // '3xl': '7rem'
+                    }
+                }
+            }
+        }
+    </script>
+
+
 
     <title></title>
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <!-- nav section -->
+        <nav class="mt-3.5 lg:mt-10">
+            <div class="container">
+                <div class="flex flex-col">
+                    <div
+                        class="w-full navbar lg:bg-primary justify-between flex-row-reverse lg:flex-row  lg:rounded-[50px] lg:pl-4 lg:pr-6 lg:py-3">
+
+                        <div class="lg:hidden">
+                            <label class="btn btn-square">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M4 6h16M4 12h16M4 18h16">
+                                    </path>
+                                </svg>
+                            </label>
+                        </div>
+                        <div class="lg:block hidden">
+                            <ul class="menu menu-horizontal text-base [&>li>a]:hover:text-white">
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#about">About Us</a></li>
+                                <li><a href="#shop">Shop</a></li>
+                                <li><a href="#all-fruits">All Fruits</a></li>
+                            </ul>
+                        </div>
+                        <a href="#home" class="flex items-center gap-2">
+                            <img src="./images/logo.png" alt="Logo Icon" class="w-10">
+                            <span class="text-2xl font-bold text-title lg:text-white">Fruit Burst</span>
+                        </a>
+                        <form action="#" class="hidden bg-white text-title py-2 pr-4 rounded-3xl lg:flex">
+                            <input type="search" id="search" name="search" placeholder="Search here"
+                                class="focus:outline-none h-full pl-6 pr-4 rounded-l-3xl" required>
+                            <button type="submit">
+                                <i class="fa-solid fa-magnifying-glass text-title"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
