--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <body>
     <header>
         <!-- nav section -->
+       <section>
         <nav class="mt-3.5 lg:mt-10">
+       </section>
             <div class="container">
                 <div class="flex flex-col">
                     <div
@@ -98,6 +100,93 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner section -->
+        <section class="mt-8">
+            <div class="container">
+                <div class="w-full carousel">
+                    <!-- slide1 -->
+                    <div id="slide1" class=" w-full carousel-item relative">
+                        <div
+                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner1.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
+                            <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
+                            <h5>We supply highly quality organic products</h5>
+                            <a href="#shop" class="btn btn-primary">Shop Now</a>
+                        </div>
+                        <div class="flex justify-between absolute transform -translate-y-1/2 top-1/2 left-6 right-6">
+                            <a href="#slide4"
+                                class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                                <i class="fa-solid fa-angle-left"></i>
+                            </a>
+                            <a href="#slide2"
+                                class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- slide2 -->
+                    <div id="slide2" class="w-full carousel-item relative">
+                        <div
+                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner2.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
+                            <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
+                            <h5>We supply highly quality organic products</h5>
+                            <a href="#shop" class="btn btn-primary">Shop Now</a>
+                        </div>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide2"
+                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                            <i class="fa-solid fa-angle-left"></i>
+                            </a>
+                            <a href="#slide4"
+                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                            <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- slide3 -->
+                    <div id="slide3" class="w-full carousel-item relative">
+                        <div
+                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner2.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
+                            <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
+                            <h5>We supply highly quality organic products</h5>
+                            <a href="#shop" class="btn btn-primary">Shop Now</a>
+                        </div>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide2"
+                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                            <i class="fa-solid fa-angle-left"></i>
+                            </a>
+                            <a href="#slide4"
+                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                            <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- slide4 -->
+                    <div id="slide4" class="w-full carousel-item relative">
+                        <div
+                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner4.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
+                            <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
+                            <h5>We supply highly quality organic products</h5>
+                            <a href="#shop" class="btn btn-primary">Shop Now</a>
+                        </div>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                            <a href="#slide3"
+                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                            <i class="fa-solid fa-angle-left"></i>
+                            </a>
+                            <a href="#slide1"
+                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                            <i class="fa-solid fa-chevron-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
