--- a/index.html
+++ b/index.html
@@ -60,45 +60,45 @@
 <body>
     <header>
         <!-- nav section -->
-       <section>
-        <nav class="mt-3.5 lg:mt-10">
-       </section>
-            <div class="container">
-                <div class="flex flex-col">
-                    <div
-                        class="w-full navbar lg:bg-primary justify-between flex-row-reverse lg:flex-row  lg:rounded-[50px] lg:pl-4 lg:pr-6 lg:py-3">
+        <section>
+            <nav class="mt-3.5 lg:mt-10">
+        </section>
+        <div class="container">
+            <div class="flex flex-col">
+                <div
+                    class="w-full navbar lg:bg-primary justify-between flex-row-reverse lg:flex-row  lg:rounded-[50px] lg:pl-4 lg:pr-6 lg:py-3">
 
-                        <div class="lg:hidden">
-                            <label class="btn btn-square">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M4 6h16M4 12h16M4 18h16">
-                                    </path>
-                                </svg>
-                            </label>
-                        </div>
-                        <div class="lg:block hidden">
-                            <ul class="menu menu-horizontal text-base [&>li>a]:hover:text-white">
-                                <li><a href="#home">Home</a></li>
-                                <li><a href="#about">About Us</a></li>
-                                <li><a href="#shop">Shop</a></li>
-                                <li><a href="#all-fruits">All Fruits</a></li>
-                            </ul>
-                        </div>
-                        <a href="#home" class="flex items-center gap-2">
-                            <img src="./images/logo.png" alt="Logo Icon" class="w-10">
-                            <span class="text-2xl font-bold text-title lg:text-white">Fruit Burst</span>
-                        </a>
-                        <form action="#" class="hidden bg-white text-title py-2 pr-4 rounded-3xl lg:flex">
-                            <input type="search" id="search" name="search" placeholder="Search here"
-                                class="focus:outline-none h-full pl-6 pr-4 rounded-l-3xl" required>
-                            <button type="submit">
-                                <i class="fa-solid fa-magnifying-glass text-title"></i>
-                            </button>
-                        </form>
+                    <div class="lg:hidden">
+                        <label class="btn btn-square">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h16M4 18h16">
+                                </path>
+                            </svg>
+                        </label>
                     </div>
+                    <div class="lg:block hidden">
+                        <ul class="menu menu-horizontal text-base [&>li>a]:hover:text-white">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#about">About Us</a></li>
+                            <li><a href="#shop">Shop</a></li>
+                            <li><a href="#all-fruits">All Fruits</a></li>
+                        </ul>
+                    </div>
+                    <a href="#home" class="flex items-center gap-2">
+                        <img src="./images/logo.png" alt="Logo Icon" class="w-10">
+                        <span class="text-2xl font-bold text-title lg:text-white">Fruit Burst</span>
+                    </a>
+                    <form action="#" class="hidden bg-white text-title py-2 pr-4 rounded-3xl lg:flex">
+                        <input type="search" id="search" name="search" placeholder="Search here"
+                            class="focus:outline-none h-full pl-6 pr-4 rounded-l-3xl" required>
+                        <button type="submit">
+                            <i class="fa-solid fa-magnifying-glass text-title"></i>
+                        </button>
+                    </form>
                 </div>
             </div>
+        </div>
         </nav>
 
         <!-- banner section -->
@@ -110,7 +110,7 @@
                         <div
                             class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner1.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
                             <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
-                            <h5>We supply highly quality organic products</h5>
+                            <h6>We supply highly quality organic products</h6>
                             <a href="#shop" class="btn btn-primary">Shop Now</a>
                         </div>
                         <div class="flex justify-between absolute transform -translate-y-1/2 top-1/2 left-6 right-6">
@@ -135,12 +135,12 @@
                         </div>
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide2"
-                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
-                            <i class="fa-solid fa-angle-left"></i>
+                                class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                                <i class="fa-solid fa-angle-left"></i>
                             </a>
                             <a href="#slide4"
-                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
-                            <i class="fa-solid fa-chevron-right"></i>
+                                class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                                <i class="fa-solid fa-chevron-right"></i>
                             </a>
                         </div>
                     </div>
@@ -155,12 +155,12 @@
                         </div>
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide2"
-                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
-                            <i class="fa-solid fa-angle-left"></i>
+                                class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                                <i class="fa-solid fa-angle-left"></i>
                             </a>
                             <a href="#slide4"
-                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
-                            <i class="fa-solid fa-chevron-right"></i>
+                                class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                                <i class="fa-solid fa-chevron-right"></i>
                             </a>
                         </div>
                     </div>
@@ -175,12 +175,12 @@
                         </div>
                         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                             <a href="#slide3"
-                            class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
-                            <i class="fa-solid fa-angle-left"></i>
+                                class="text-white btn btn-circle bg-title hover:text-title text-2xl hover:bg-white">
+                                <i class="fa-solid fa-angle-left"></i>
                             </a>
                             <a href="#slide1"
-                            class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
-                            <i class="fa-solid fa-chevron-right"></i>
+                                class="bg-title text-white btn btn-circle border-title hover:text-title text-3xl hover:bg-white">
+                                <i class="fa-solid fa-chevron-right"></i>
                             </a>
                         </div>
                     </div>
@@ -188,7 +188,40 @@
             </div>
         </section>
     </header>
-    <main></main>
+
+    <main>
+        <!-- fruit section -->
+        <section class="relative lg:block hidden -top-24">
+            <div class="container">
+                <div class=" bg-white w-5/6 shadow-lg p-8 rounded-xl flex justify-around items-center mx-auto">
+
+                    <div class="flex flex-col items-center gap-2">
+                        <img src="./images/fruit1.png" alt="Blackberry">
+                        <p class="font-medium text-base">Blackberry</p>
+                    </div>
+                    <div class="flex flex-col items-center gap-2">
+                        <img src="./images/fruit2.png" alt="Orange">
+                        <p class="font-medium text-base">Orange</p>
+                    </div>
+                    <div class="flex flex-col items-center gap-2">
+                        <img src="./images/fruit3.png" alt="Mango">
+                        <p class="font-medium text-base">Mango</p>
+                    </div>
+                    <div class="flex flex-col items-center gap-2">
+                        <img src="./images/fruit4.png" alt="Strawberry">
+                        <p class="font-medium text-base">Strawberry</p>
+                    </div>
+                    <div class="flex flex-col items-center gap-2">
+                        <img src="./images/fruit5.png" alt="Pomegranate">
+                        <p class="font-medium text-base">Pomegranate</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        
+    </main>
     <footer></footer>
 </body>
 
