Deal of the day

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!-- slide3 -->
                     <div id="slide3" class="w-full carousel-item relative">
                         <div
-                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner2.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
+                            class="w-full text-white bg-blend-overlay bg-center space-y-4 rounded-xl px-6 pt-12 pb-12 md:pt-16 md:pb-16 lg:pb-40 text-center [&>*]:mx-auto bg-[url('images/banner3.png'),_linear-gradient(180deg,_#121212,_transparent)] [&>*]:max-w-[600px] ">
                             <h4 class="text-3xl font-bold md:text-7xl">Exotic tastes at your doorstep</h4>
                             <h5>We supply highly quality organic products</h5>
                             <a href="#shop" class="btn btn-primary">Shop Now</a>
@@ -220,7 +220,50 @@
             </div>
         </section>
 
-        
+        <section class="lg:text-left text-center">
+            <div class="container">
+                <div class="flex flex-col lg:flex-row justify-between items-center gap-8">
+                  <div class="max-w-[500px]">
+                    <h1 class="text-3xl font-bold">Deal of the day</h1>
+                    <p class="text-gray-500">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
+                      literature from 45 BC, making it over 2000 years old.</p>
+                  </div>
+                  <div>
+                <div>
+                    <div class="grid grid-flow-col gap-6 md:gap-10 text-center auto-cols-max">
+                        <div class="flex flex-col">
+                            <span
+                                class="countdown text-5xl font-black text-title mb-2 after:content-[':'] relative after:absolute after:-right-[15px] md:after:-right-[24px] after:top-[5px] after:font-bold after:text-3xl after:text-dark-1">
+                                <span style="--value:25;"></span>
+                            </span>
+                           <p  class="font-medium text-sm text-slate-400">Days</p>
+                        </div>
+                        <div class="flex flex-col">
+                            <span
+                                class="countdown text-5xl font-black text-title mb-2 after:content-[':'] relative after:absolute after:-right-[15px] md:after:-right-[24px] after:top-[5px] after:font-bold after:text-3xl after:text-dark-1">
+                                <span style="--value:10;"></span>
+                            </span>
+                            <p class="font-medium text-sm text-slate-400"> Hours</p>
+                        </div>
+                        <div class="flex flex-col">
+                            <span
+                                class="countdown text-5xl font-black text-title mb-2 after:content-[':'] relative after:absolute after:-right-[15px] md:after:-right-[24px] after:top-[5px] after:font-bold after:text-3xl after:text-dark-1">
+                                <span style="--value:15;"></span>
+                            </span>
+                            <p class="font-medium text-sm text-slate-400""> Minutes</p>
+                        </div>
+                        <div class="flex flex-col">
+                            <span class="countdown text-5xl font-black text-title mb-2">
+                                <span style="--value:30;"></span>
+                            </span>
+                            <p class="font-medium text-sm text-slate-400">Seconds</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     <footer></footer>
 </body>
