Meet the team section

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
                         <!-- box 1 -->
                         <div class="flex flex-col gap-6 border-[1px] p-8 rounded-lg">
-                            <img src="./images/fruit6.png" alt="Orange" class="w-full max-w-[80px] mx-auto pb-2">
+                            <img src="images/fruit6.png" alt="Orange" class="w-full max-w-[80px] mx-auto pb-2">
                             <p class="text-2xl  font-medium">12.90$ - 18.85$</p>
                             <hr class="text-gray-500">
                             <p class="text-lg font-medium text-slate-400">Apples</p>
@@ -505,7 +505,7 @@
                                 <input type="radio" name="card-4" class="bg-primary mask mask-star-2 mask-half-1" />
                                 <input type="radio" name="card-4" class="bg-primary mask mask-star-2 mask-half-2" />
                             </div>
-                            <a href="#/" class="text-primary font-bold" onclick="box_4.showModal()">Details</a>
+                            <a href="#/" class="text-primary font-bold" onclick="modal_4.showModal()">Details</a>
                         </div>
 
                         <dialog id="modal_4" class="modal">
@@ -549,6 +549,77 @@
                                 <button>close</button>
                             </form>
                         </dialog>
+                    </div>
+                </div>
+                <div class="text-center mt-10">
+                    <a href="#all-fruits" class="btn btn-primary">All Fruits</a>
+                  </div>
+            </div>
+        </section>
+
+        <!-- Meet the team section -->
+        <section>
+            <div class="container">
+                <div
+                    class="bg-[url('./images/team.png'),_linear-gradient(#121212B3,_#121212B3)] lg:py-16  bg-cover bg-center text-white bg-blend-overlay">
+                    <h2 class="text-white text-3xl justify-center text-center">Meet the team section</h2>
+                    <p class="max-w-[600px] justify-center text-center mx-auto">Contrary to popular belief, is not
+                        simply random text. It has roots in a
+                        piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <div
+                        class="mt-10 grid justify-center items-center gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 max-w-[1000px] mx-auto">
+                        <div class="flex flex-col justify-center items-center">
+                            <img src="./images/member1.png" alt="Team Member" class="pb-2 w-full max-w-[100px]">
+                            <p class="text-2xl font-medium">Awlad Hossain</p>
+                            <p>Fruits Expert</p>
+                            <div class="flex justify-center items-center gap-4 mt-2">
+                                <i
+                                    class="fa-brands fa-facebook-f  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-twitter rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-linkedin-in  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                            </div>
+                        </div>
+                        <div class="flex flex-col justify-center items-center">
+                            <img src="./images/member2.png" alt="Team Member" class="pb-2 w-full max-w-[100px]">
+                            <p class="text-2xl font-medium">Safia Chowdhury</p>
+                            <p>Fruits Expert</p>
+                            <div class="flex justify-center items-center gap-4 mt-2">
+                                <i
+                                    class="fa-brands fa-facebook-f  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-twitter rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-linkedin-in  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer njustify-center text-center"></i>
+                            </div>
+                        </div>
+                        <div class="flex flex-col justify-center items-center">
+                            <img src="./images/member3.png" alt="Team Member" class="pb-2 w-full max-w-[100px]">
+                            <p class="text-2xl font-medium">Rokib Hossain</p>
+                            <p>Fruits Expert</p>
+                            <div class="flex justify-center items-center gap-4 mt-2">
+                                <i
+                                    class="fa-brands fa-facebook-f  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-twitter rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-linkedin-in  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                            </div>
+                        </div>
+                        <div class="flex flex-col justify-center items-center">
+                            <img src="./images/member4.png" alt="Team Member" class="pb-2 w-full max-w-[100px]">
+                            <p class="text-2xl font-medium">Chaity</p>
+                            <p>Fruits Expert</p>
+                            <div class="flex justify-center items-center gap-4 mt-2">
+                                <i
+                                    class="fa-brands fa-facebook-f  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-twitter rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                                <i
+                                    class="fa-brands fa-linkedin-in  rounded-full duration-300 text-lg hover:scale-125 w-8 h-8 bg-primary cursor-pointer justify-center text-center"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
