--- a/index.html
+++ b/index.html
@@ -730,6 +730,31 @@
 
     <!-- aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->
 
+ <!-- footer section -->
+ <footer>
+    <div class="mt-12 bg-color text-white text-center  py-12  ">
+        <a href="#home" class="flex items-center justify-center gap-2">
+            <img src="images/logo.png" alt="Logo Icon" class="w-10">
+            <span class="text-2xl font-bold">Fruit Burst</span>
+        </a>
+        <ul class="flex flex-wrap gap-6 justify-center items-center m-4">
+            <li><a href="#home" class="hover:text-primary">Home</a></li>
+            <li><a href="#about" class="hover:text-primary">About Us</a></li>
+            <li><a href="#shop" class="hover:text-primary">Shop</a></li>
+            <li><a href="#all-fruits" class="hover:text-primary">All Fruits</a></li>
+            <li><a href="#support" class="hover:text-primary">Support</a></li>
+            <li><a href="#account" class="hover:text-primary">My Account</a></li>
+        </ul>
+        <ul class="flex justify-center">
+            <li><i class="fa-brands fa-twitter p-5"></i></li>
+            <li><i class="fa-brands fa-facebook p-5"></i></li>
+            <li><i class="fa-brands fa-youtube p-5"></i></li>
+            <li><i class="fa-brands fa-square-instagram p-5"></i></li>
+            <li><i class="fa-brands fa-apple p-5"></i></li>
+        </ul>
+    </div>
+  </footer>
+  <!-- footer section end -->
    
 </body>
 
